--- a/Bosco.sty
+++ b/Bosco.sty
@@ -6,23 +6,20 @@
 \usepackage{xcolor}
 \usepackage{tcolorbox}
 
-% Acronyms
-%
-% \usepackage{acronym}
-% \input{acronyms.tex}
-% \renewcommand*{\acsfont}[1]{\textsc{#1}}
-
 % Page setup
 %
-
-\usepackage[margin=2cm]{geometry}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
 \renewcommand{\headrulewidth}{0.4pt}
 \setlength{\headheight}{15pt}
-
+\fancyheadoffset[R]{0.5cm} 
+\lhead{\rmfamily \textcolor{gray}{\AcademicTitle}}
+\rhead{\rmfamily \textcolor{gray}{\Report}}
+\lfoot{\rmfamily \textcolor{gray}{\Author}(\StudentID)}
+\rfoot{\rmfamily \thepage}
+\usepackage[margin=2cm]{geometry}
 \usepackage{parskip}
 \usepackage[bottom]{footmisc}
 
@@ -45,19 +42,6 @@
 \usepackage{fvextra}
 \let\cleardoublepage\clearpage
 
-\graphicspath{{diagrams/}}
-
-\renewcommand{\headrulewidth}{0.4pt}
-\setlength{\headheight}{15pt}
-
-\lhead{\rmfamily \textcolor{gray}{\AcademicTitle}}
-\rhead{\rmfamily \textcolor{gray}{\Report}}
-\lfoot{\rmfamily \textcolor{gray}{\Author (\StudentID)}}
-\rfoot{\rmfamily \thepage}
-
-\usepackage[bottom]{footmisc}
-
-
 % Sectioning
 %
 
@@ -70,7 +54,7 @@
 \usepackage[toc,page]{appendix}
 \usepackage{subcaption}
 
-% Tables and foats
+% Tables and fonts
 %
 \usepackage{float}
 \floatstyle{plaintop}
@@ -83,6 +67,10 @@
 \usepackage[subpreambles=true]{standalone}
 \usepackage{import}
 
+% Acronyms
+%
+
+\usepackage{acronym}
 
 % Referencing
 %
