--- a/Bosco.tex
+++ b/Bosco.tex
@@ -273,12 +273,12 @@ supports mobile, remote and cloud browsers (UI or headless). It is also free and
    \hline
    Supports devices without extra software package & Simulated events leads to false positives\\
    \hline
-   UI End to End Testing\\
+   UI End to End Testing&\\
    \hline
-   Both client and server side debug \\
+   Both client and server side debug &\\
    \hline
   \end{tabular}
-  \caption{Pros and Cons of Tesfuncitontcafe}
+  \caption{Pros and Cons of Testcafe}
  \end{table}
 
 \begin{figure}{h}
