edit to referencing

--- a/Bosco.sty
+++ b/Bosco.sty
@@ -74,9 +74,12 @@
 
 % Referencing
 %
+\usepackage[style=apa, backend=biber]{biblatex}
+
+
 \usepackage[colorlinks=true, linkcolor=blue, filecolor=magenta, urlcolor=blue]{hyperref}
 \usepackage{cleveref}
-\usepackage[sorting=nyt,backref=true,style=numeric]{biblatex}
+% \usepackage[sorting=nyt,backref=true,style=numeric]{biblatex}
 \urlstyle{same}
 %
 \addbibresource{bibliography.bib}
